Replace Collections methods with List.of() in JsonMatcher